--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <!-- Custom styles for this template-->
   <link href="assets/css/sb-admin-2.min.css" rel="stylesheet">
 </head>
-<body class="bg-gradient-success" id="page-top">
+<body class="bg-gradient-primary" id="page-top">
   <app-root></app-root>
 
   <!-- Bootstrap core JavaScript-->
@@ -20,9 +20,8 @@
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Core plugin JavaScript-->
-  <script src="assets/vendor/jquery-easing/jquery.easing.min.js"></script>
+  <!-- <script src="assets/vendor/jquery-easing/jquery.easing.min.js"></script> -->
 
   <!-- Custom scripts for all pages-->
-  <script src="assets/js/sb-admin-2.min.js"></script>
 </body>
 </html>
